added my portions to the slides

--- a/pdr_documents/software_group.tex
+++ b/pdr_documents/software_group.tex
@@ -5,6 +5,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{subfigure}
+\usepackage{graphicx}
 \usetheme{Boadilla}
 \author{Mitch Davis, Kevin Burns}
 \title{FOX-1 Camera Board}
@@ -78,14 +79,16 @@
 \section{Task Diagram}
 \begin{frame}{Task Diagram}
 	\begin{center}
-		\large{Task Diagram}
+%		\large{Task Diagram}
+        \includegraphics[scale=0.5]{task_diagram.png}
 	\end{center}
 \end{frame}
 
 \section{System Operation Flowchart}
 \begin{frame}{System Operation Flowchart}
 	\begin{center}
-		\large{System Operation Flowchart}
+%		\large{System Operation Flowchart}
+        \includegraphics[scale=0.30]{flow_chart.png}
 	\end{center}
 \end{frame}
 
