One last change..
-MD

--- a/pdr_documents/software_group.tex
+++ b/pdr_documents/software_group.tex
@@ -42,7 +42,7 @@
 	\begin{block}{Hardware Capabilities}
 		\begin{itemize}
 			\item 32MHz Processor @ 238 uA/MHz
-			\item 382 KB ECC Flash, 48 KB ECC SRAM, 12 KB ECC EEPROM
+			\item 382 KB ECC Flash, 48 KB SRAM, 12 KB ECC EEPROM
 			\item 382 KB Dual-Port DRAM FIFO
 			\item 1Mb 40MHz SPI MRAM
 			\item 400 kHz SCCB (I2C compatible) Camera Control
