Final final version... I swear

--- a/pdr_documents/software_group.tex
+++ b/pdr_documents/software_group.tex
@@ -45,7 +45,7 @@
 			\item 382 KB ECC Flash, 48 KB SRAM, 12 KB ECC EEPROM
 			\item 382 KB Dual-Port DRAM FIFO
 			\item 1Mb 40MHz SPI MRAM
-			\item 400 kHz SCCB (I2C compatible) Camera Control
+			\item 400 kHz SCCB Camera Control
 			\item Two 19.2 kbaud UART
 		\end{itemize}
 	\end{block}
@@ -106,7 +106,7 @@
 			\item STM32L152xB Development Boards received on Tuesday
 			\item Existing STM32F4 code ported and runs successfully as of Tuesday
 			\item OV7670 SCCB Interface is in work
-			\item Need to discuss interface communications with IHU folks
+			\item Interface communication with IHU inwork
 		\end{itemize}
 \end{frame}
 
